tests/expectations/compiler/finalize/read_write_mapping_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:8:16
     |
   8 |         return balances[addr];
     |                ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:8:25
     |
   8 |         return balances[addr];
     |                         ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `balances`.
    --> compiler-test:12:9
     |
  12 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:12:9
     |
  12 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:12:18
     |
  12 |         balances[addr] = amount;
     |                  ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `balances`.
    --> compiler-test:16:9
     |
  16 |         balances = misc;
     |         ^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:8:16
     |
   8 |         return balances[addr];
     |                ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:8:25
     |
   8 |         return balances[addr];
     |                         ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `balances`.
    --> compiler-test:12:9
     |
  12 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:12:9
     |
  12 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:12:18
     |
  12 |         balances[addr] = amount;
     |                  ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `balances`.
    --> compiler-test:16:9
     |
  16 |         balances = misc;
     |         ^^^^^^^^
